Moved giter8 template to separate repo.